@@ -4,7 +4,8 @@
   "description": "MNNIT's Dark Web file server",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mime-types": "^2.1.35"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
