@@ -4,6 +4,10 @@
  */
 
 import CONFIG from './config.js';
+import UI from './ui.js';
+
+// File content cache
+const fileCache = new Map();
 
 /**
  * Returns appropriate icon based on file type
@@ -62,10 +66,16 @@ function renderFileItem(file, container) {
             <p>Size: ${file.size} | Modified: ${file.lastModified}</p>
         </div>
         <div class="file-actions">
+            ${isPreviewable(file.type) ? 
+                `<button class="file-preview" data-name="${file.name}">Preview</button>` : ''}
             <button class="file-action" data-name="${file.name}">Download</button>
         </div>
     `;
     container.appendChild(fileItem);
+}
+
+function isPreviewable(fileType) {
+    return ['text', 'code', 'web', 'python', 'java', 'cpp', 'data'].includes(fileType);
 }
 
 /**
@@ -84,6 +94,67 @@ function attachEventListeners() {
     document.querySelectorAll('.file-action').forEach(btn => {
         btn.addEventListener('click', downloadFile);
     });
+    
+    document.querySelectorAll('.file-preview').forEach(btn => {
+        btn.addEventListener('click', (event) => {
+            const fileName = event.target.getAttribute('data-name');
+            UI.showPreview(fileName);
+        });
+    });
+}
+
+/**
+ * Pre-fetches and caches text files content
+ * @param {Array} files - List of files
+ */
+async function cacheTextFiles(files) {
+    const textFiles = files.filter(file => 
+        ['text', 'code', 'web', 'python', 'java', 'cpp', 'data'].includes(file.type)
+    );
+
+    console.log('Starting to cache', textFiles.length, 'text files');
+    
+    for (const file of textFiles) {
+        try {
+            const response = await fetch(`${CONFIG.apiEndpoints.preview}/${encodeURIComponent(file.name)}`);
+            if (!response.ok) continue;
+            
+            const content = await response.text();
+            if (content.length > CONFIG.cache.maxFileSize) continue;
+            
+            fileCache.set(file.name, content);
+            console.log('Cached file:', file.name);
+        } catch (error) {
+            console.warn('Failed to cache file:', file.name, error);
+        }
+    }
+    
+    console.log('Cached', fileCache.size, 'files');
+}
+
+/**
+ * Gets file content from cache or fetches it
+ * @param {string} fileName - Name of the file
+ * @returns {Promise<string>} - File content
+ */
+async function getFileContent(fileName) {
+    if (fileCache.has(fileName)) {
+        console.log('Serving from cache:', fileName);
+        return fileCache.get(fileName);
+    }
+
+    const response = await fetch(`${CONFIG.apiEndpoints.preview}/${encodeURIComponent(fileName)}`);
+    if (!response.ok) throw new Error('Failed to load file');
+    
+    const content = await response.text();
+    
+    // Cache the content if it's not too large
+    if (content.length <= CONFIG.cache.maxFileSize) {
+        fileCache.set(fileName, content);
+        console.log('Added to cache:', fileName);
+    }
+    
+    return content;
 }
 
 /**
@@ -120,6 +191,11 @@ function loadFiles() {
             
             // Add event listeners to buttons
             attachEventListeners();
+
+            // Cache text files after displaying the list
+            if (CONFIG.cache.enabled) {
+                cacheTextFiles(files);
+            }
         })
         .catch(error => {
             console.error('Error fetching files:', error);
@@ -131,5 +207,6 @@ export default {
     loadFiles,
     getFileIcon,
     renderFileItem,
-    downloadFile
+    downloadFile,
+    getFileContent
 };
