@@ -1,4 +1,0 @@
-/**
- * This file can be deleted.
- * The preview functionality has been removed from the application.
- */
