@@ -4,6 +4,7 @@
  */
 
 import CONFIG from './config.js';
+import FileSystem from './fileSystem.js';
 
 /**
  * Sets up theme toggle functionality
@@ -34,7 +35,90 @@ function updatePathDisplay() {
     currentPath.innerHTML = `<span>Path: /files/</span>`;
 }
 
+async function showPreview(fileName) {
+    console.log('Showing preview for:', fileName);
+    
+    const previewDialog = document.createElement('dialog');
+    previewDialog.className = CONFIG.cssClasses.previewDialog;
+    
+    previewDialog.innerHTML = `
+        <div class="preview-header">
+            <h3>${fileName}</h3>
+            <button class="close-preview">×</button>
+        </div>
+        <div class="preview-content">
+            <pre class="loading">Loading preview...</pre>
+        </div>
+    `;
+    
+    document.body.appendChild(previewDialog);
+    previewDialog.showModal();
+
+    try {
+        const content = await FileSystem.getFileContent(fileName);
+        console.log('Preview content received, length:', content.length);
+        
+        const escapedContent = content.replace(/[&<>"']/g, char => ({
+            '&': '&amp;',
+            '<': '&lt;',
+            '>': '&gt;',
+            '"': '&quot;',
+            "'": '&#39;'
+        }[char]));
+        
+        previewDialog.querySelector('.preview-content').innerHTML = `<pre class="code">${escapedContent}</pre>`;
+    } catch (error) {
+        console.error('Preview error:', error);
+        previewDialog.querySelector('.preview-content').innerHTML = 
+            `<div class="error-state">
+                Error loading preview: ${error.message}
+                <br>
+                <small>Check browser console for more details</small>
+            </div>`;
+    }
+
+    previewDialog.querySelector('.close-preview').addEventListener('click', () => {
+        previewDialog.close();
+        previewDialog.remove();
+    });
+}
+
+function formatContent(content, mimeType) {
+    // Escape HTML to prevent XSS
+    const escapedContent = content.replace(/[&<>"']/g, char => ({
+        '&': '&amp;',
+        '<': '&lt;',
+        '>': '&gt;',
+        '"': '&quot;',
+        "'": '&#39;'
+    }[char]));
+
+    // Add syntax highlighting class based on MIME type
+    const langClass = getMimeTypeClass(mimeType);
+    return `<pre class="code ${langClass}">${escapedContent}</pre>`;
+}
+
+function getMimeTypeClass(mimeType) {
+    const mimeToClass = {
+        'text/html': 'language-html',
+        'text/css': 'language-css',
+        'application/javascript': 'language-javascript',
+        'application/json': 'language-json',
+        'text/xml': 'language-xml',
+        'application/xml': 'language-xml',
+        'text/x-python': 'language-python',
+        'text/x-java': 'language-java',
+        'text/x-c': 'language-c',
+        'text/x-cpp': 'language-cpp',
+        'text/markdown': 'language-markdown',
+        'text/plain': 'language-plaintext'
+    };
+    
+    return mimeToClass[mimeType] || 'language-plaintext';
+}
+
 export default {
     setupThemeToggle,
-    updatePathDisplay
+    updatePathDisplay,
+    showPreview
 };
